src/test/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/mod-static-with-const-fn.rs:34:5
   |
LL |     foo();
   |     ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
